workspace-sf/force-app/main/default/objects/OperacaoProdutoParceiro__c/OperacaoProdutoParceiro__c.object-meta.xml
<CustomObject>
    <description>Objeto para informar a operação do Produto do Parceiro</description>
    <label>Operação do produto do parceiro</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operações dos produtos do parceiro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>