workspace-sf/force-app/main/default/objects/OperacaoProdutoParceiro__c/fields/Direcao__c.field-meta.xml
<CustomField>
    <fullName>Direcao__c</fullName>
    <label>Direção</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entrada</fullName>
            </value>
            <value>
                <fullName>Saída</fullName>
            </value>
            <value>
                <fullName>Ambos</fullName>
                <isActive>false</isActive>
                <label>Ambos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>