workspace-sf/force-app/main/default/objects/OperacaoProdutoParceiro__c/fields/Lote__c.field-meta.xml
<CustomField>
    <fullName>Lote__c</fullName>
    <label>Lote</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>