workspace-sf/force-app/main/default/objects/OperacaoProdutoParceiro__c/fields/OperacaoParceiro__c.field-meta.xml
<CustomField>
    <fullName>OperacaoParceiro__c</fullName>
    <inlineHelpText>Código que o tipo de operação no sistema do parceiro representa</inlineHelpText>
    <label>Operação no parceiro</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>