workspace-sf/force-app/main/default/objects/OperacaoProdutoParceiro__c/fields/PastaArquivamento__c.field-meta.xml
<CustomField>
    <fullName>PastaArquivamento__c</fullName>
    <inlineHelpText>Pasta onde o arquivo será salvo no ECM</inlineHelpText>
    <label>Pasta de Arquivamento</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>