workspace-sf/force-app/main/default/objects/OperacaoProdutoParceiro__c/fields/ProdutoParceiro__c.field-meta.xml
<CustomField>
    <fullName>ProdutoParceiro__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Produto do parceiro</label>
    <referenceTo>ProdutoParceiro__c</referenceTo>
    <relationshipLabel>Operações dos produtos do parceiro</relationshipLabel>
    <relationshipName>OperacoesProdutosParceiro</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>