workspace-sf/force-app/main/default/objects/OperacaoProdutoParceiro__c/fields/Sigla__c.field-meta.xml
<CustomField>
    <fullName>Sigla__c</fullName>
    <label>Sigla</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADS</fullName>
            </value>
            <value>
                <fullName>ASSIST</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>ETQ</fullName>
            </value>
            <value>
                <fullName>FAT</fullName>
            </value>
            <value>
                <fullName>PGT</fullName>
            </value>
            <value>
                <fullName>PRE</fullName>
            </value>
            <value>
                <fullName>SIN</fullName>
            </value>
            <value>
                <fullName>MOV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>