workspace-sf/force-app/main/default/objects/OperacaoProdutoParceiro__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adesão</fullName>
            </value>
            <value>
                <fullName>Assistência</fullName>
            </value>
            <value>
                <fullName>Cancelamento</fullName>
            </value>
            <value>
                <fullName>Estoque</fullName>
            </value>
            <value>
                <fullName>Faturamento</fullName>
            </value>
            <value>
                <fullName>Pagamento</fullName>
            </value>
            <value>
                <fullName>Prefaturamento</fullName>
                <label>Pré-faturamento</label>
            </value>
            <value>
                <fullName>Sinistro</fullName>
            </value>
            <value>
                <fullName>Movimentação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>