workspace-sf/force-app/main/default/objects/OperacaoProdutoParceiro__c/fields/TipoSeguro__c.field-meta.xml
<CustomField>
    <fullName>TipoSeguro__c</fullName>
    <label>Tipo de Seguro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novo</fullName>
            </value>
            <value>
                <fullName>Endosso</fullName>
            </value>
            <value>
                <fullName>Cancelamento</fullName>
            </value>
            <value>
                <fullName>Renovação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>